[FEAT/styles]: Form container styles added.

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -13,6 +13,10 @@
     background-color: colors.$background-secondary
     color: colors.$text-secondary
 
+    h1
+      margin: 0 0 16px 0
+      text-transform: uppercase
+
   .GiftList-container
     background-color: colors.$white
     max-height: 280px
