--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -14,6 +14,7 @@
     background-color: colors.$background-primary
 
     h1
+      text-transform: uppercase
       margin-bottom: sizes.$lg
 
   .GiftList-container
