--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -2,8 +2,10 @@
 @use './modules/sizes'
 
 .App
+  max-height: 500px
+
   .Form-container, .GiftList-container
-    width: 350px
+    max-width: 350px
     padding: sizes.$lg
 
   .Form-container
