--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -5,6 +5,7 @@
   display: flex
   background-color: colors.$text-secondary
   padding: sizes.$md
+  margin-right: sizes.$lg
   margin-bottom: sizes.$lg
   border-radius: sizes.$md
 
