--- a/src/styles/GiftList.sass
+++ b/src/styles/GiftList.sass
@@ -6,6 +6,18 @@
     height: 230px
     overflow-y: auto
 
+    &::-webkit-scrollbar
+      width: sizes.$lg
+      height: sizes.$lg
+
+      &-thumb
+        background-color: colors.$background-primary
+        border-radius: 100px
+        border: 4px solid colors.$text-primary
+      &-track
+        border-radius: 100px
+        background-color: colors.$background-primary
+
     li:last-child
       margin-bottom: 0
 
