[FEAT]: minor changes.

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -3,7 +3,7 @@
 
 .App
   .Form-container, .GiftList-container
-    width: 350px
+    width: 400px
     padding: sizes.$lg
 
   .Form-container
@@ -15,7 +15,8 @@
 
     h1
       margin-bottom: sizes.$md
+      text-transform: uppercase
 
   .GiftList-container
-    height: 260px
+    min-height: 217px
     background-color: colors.$black
