[FEAT/styles]: styles for .noGifts-img class added.

--- a/src/styles/GiftList.sass
+++ b/src/styles/GiftList.sass
@@ -38,3 +38,8 @@
     .noGifts-img
       width: sizes.$image-size
       height: sizes.$image-size
+    .noGifts-msg
+      font-size: 1.1rem
+      font-weight: bold
+      margin-top: sizes.$lg
+      color: colors.$text-primary
