--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
+  background: white url('./images/winter-christmas-background.jpg') no-repeat center fixed;
 }
 
 code {
