[FEAT/styles]: new styles & minor changes added.

--- a/src/styles/Form.sass
+++ b/src/styles/Form.sass
@@ -14,12 +14,15 @@
         outline: none
 
     .gift-input
-      width: 60%
+      width: 40%
       margin-right: sizes.$sm
       border-top-left-radius: sizes.$md
       border-bottom-left-radius: sizes.$md
+    .image-input
+      width: 40%
+      margin-right: sizes.$sm
     .quantity-input
-      width: 10%
+      width: 5%
       margin-right: sizes.$md
       border-top-right-radius: sizes.$md
       border-bottom-right-radius: sizes.$md
