[FEAT]: styles updated.

--- a/src/styles/Form.sass
+++ b/src/styles/Form.sass
@@ -14,10 +14,13 @@
         outline: none
 
     .gift-input
-      width: 60%
+      width: 40%
       margin-right: sizes.$sm
       border-top-left-radius: sizes.$md
       border-bottom-left-radius: sizes.$md
+    .image-input
+      width: 30%
+      margin-right: sizes.$sm
     .quantity-input
       width: 10%
       margin-right: sizes.$md
