--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -9,17 +9,32 @@
   border-radius: sizes.$md
   background-color: colors.$text-secondary
 
+  p, .gift-img, div
+    align-self: center
+
+  .gift-img
+    height: sizes.$no-image-size
+    width: 18%
+
   p
-    width: 80%
+    width: 62%
+    margin-left: sizes.$lg
     font-weight: bold
     overflow-wrap: break-word
-  button
-    align-self: center
-    font-weight: bold
-    border: none
-    border-radius: sizes.$lg
-    background-color: colors.$text-primary
-    cursor: pointer
-    &:hover
-      color: colors.$white
-      background-color: colors.$background-primary
+
+    .gift-quantity
+      color: colors.$black
+
+  div
+    width: 20%
+    text-align: center
+    .remove-btn
+      padding: sizes.$md sizes.$lg
+      font-weight: bold
+      border: none
+      border-radius: sizes.$lg
+      background-color: colors.$text-primary
+      cursor: pointer
+      &:hover
+        color: colors.$white
+        background-color: colors.$background-primary
