--- a/src/styles/Form.sass
+++ b/src/styles/Form.sass
@@ -2,41 +2,61 @@
 @use './modules/_sizes'
 
 .Form
-  .inputs
+  height: 100%
+  &:invalid .buttons .add-btn
+    opacity: 0.3
+    cursor: not-allowed
+    pointer-events: none
+
+  .inputs, .buttons
     display: flex
+    flex-direction: column
 
     .input, .btn
       padding: sizes.$md
       border: none
 
     .input
+      padding: sizes.$lg
+      border: 1px solid #ccc
+      border-radius: sizes.$md
+      margin-bottom: sizes.$md
       &:focus
-        outline: none
+        outline-color: colors.$text-primary
+      &:invalid
+        outline-color: colors.$extra
+      &:valid
+        outline-color: lime
 
     .gift-input
-      width: 40%
-      margin-right: sizes.$sm
-      border-top-left-radius: sizes.$md
-      border-bottom-left-radius: sizes.$md
     .image-input
-      width: 30%
-      margin-right: sizes.$sm
     .quantity-input
-      width: 10%
-      margin-right: sizes.$md
-      border-top-right-radius: sizes.$md
-      border-bottom-right-radius: sizes.$md
+      width: 20%
+      align-self: flex-end
+      margin-bottom: sizes.$lg
 
-    .add-btn
-      border-top-left-radius: sizes.$md
-      border-bottom-left-radius: sizes.$md
-      border-top-right-radius: sizes.$md
-      border-bottom-right-radius: sizes.$md
+  .buttons
+    flex-direction: row
+    justify-content: space-between
+    .add-btn, .close-btn
+      width: 45%
+      padding: sizes.$lg
+      border: none
+      border-radius: sizes.$md
       font-weight: bold
-      background-color: colors.$text-primary
+      color: colors.$white
+      background-color: colors.$background-primary
       cursor: pointer
       &:hover
         background-color: colors.$text-secondary
+
+    .close-btn
+      text-transform: capitalize
+      color: colors.$black
+      background-color: #ccc
+      &:hover
+        color: colors.$white
+        background-color: colors.$black
 
   .errorMsg
     margin-top: sizes.$lg
