[FEAT]: minor changes added.

--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -9,14 +9,14 @@
   border-radius: sizes.$md
   background-color: colors.$text-secondary
 
-  p, .gift-img, div
+  .gift-name, .gift-img, div
     align-self: center
 
   .gift-img
     height: sizes.$no-image-size
     width: 18%
 
-  p
+  .gift-name
     width: 62%
     margin-left: sizes.$lg
     font-weight: bold
@@ -24,6 +24,9 @@
 
     .gift-quantity
       color: colors.$black
+
+    .gift-to
+      color: colors.$white
 
   div
     width: 20%
