[FEAT]: edit-btn styles added. input/button focus styles added for more accesibility - Day 14.

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -28,6 +28,8 @@
       &:hover
         color: colors.$black
         background-color: colors.$text-primary
+      &:focus
+        outline-color: colors.$text-primary
 
   .GiftList-container
     width: 450px
