--- a/src/styles/GiftList.sass
+++ b/src/styles/GiftList.sass
@@ -34,6 +34,8 @@
       &:hover
         color: colors.$white
         background-color: colors.$extra
+      &:focus
+        outline-color: colors.$white
 
     .noGifts-img
       width: sizes.$image-size
