--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -25,6 +25,7 @@
       text-transform: uppercase
       color: colors.$text-primary
       background-color: colors.$black
+      cursor: pointer
       &:hover
         color: colors.$black
         background-color: colors.$text-primary
