[FEAT]: minor changes in styles.

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -25,9 +25,12 @@
       text-transform: uppercase
       color: colors.$text-primary
       background-color: colors.$black
+      cursor: pointer
       &:hover
         color: colors.$black
         background-color: colors.$text-primary
+      &:focus
+        outline-color: colors.$text-primary
 
   .GiftList-container
     width: 450px
