[FEAT]: minor changes added.

--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -32,7 +32,7 @@
     width: 20%
     text-align: center
     .remove-btn, .edit-btn
-      padding: sizes.$md sizes.$lg
+      padding: sizes.$sm sizes.$md
       font-weight: bold
       border: none
       border-radius: sizes.$lg
@@ -45,7 +45,7 @@
         outline-color: colors.$black
 
     .edit-btn
-      margin-bottom: sizes.$sm
+      margin-right: sizes.$md
       color: colors.$white
       background-color: colors.$black
       &:hover
