[FEAT]: Adviency - Day 18 finished. Total price displayed.

--- a/src/styles/GiftList.sass
+++ b/src/styles/GiftList.sass
@@ -20,9 +20,15 @@
         border-radius: 100px
         background-color: colors.$background-primary
 
-  .noGifts-container
+  .total-container, .noGifts-container
     text-align: center
 
+  .total-container
+    margin-top: sizes.$lg
+    font-size: 2rem
+    color: colors.$white
+
+  .noGifts-container
     .noGifts-btn
       margin-top: sizes.$lg
       border: none
