--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -17,7 +17,7 @@
     width: 18%
 
   .gift-name
-    width: 62%
+    width: 85%
     margin-left: sizes.$lg
     font-weight: bold
     overflow-wrap: break-word
@@ -29,9 +29,9 @@
       color: colors.$white
 
   div
-    width: 20%
+    width: 30%
     text-align: center
-    .remove-btn, .edit-btn
+    .remove-btn, .edit-btn, .duplicate-btn
       padding: sizes.$sm sizes.$md
       font-weight: bold
       border: none
@@ -44,7 +44,7 @@
       &:focus
         outline-color: colors.$black
 
-    .edit-btn
+    .edit-btn, .duplicate-btn
       margin-right: sizes.$md
       color: colors.$white
       background-color: colors.$black
@@ -53,3 +53,12 @@
         background-color: #ccc
       &:focus
         outline-color: colors.$white
+
+    .duplicate-btn
+      color: colors.$black
+      background-color: colors.$white
+      &:hover
+        color: colors.$white
+        background-color: colors.$black
+      &:focus
+        outline-color: colors.$black
