[FEAT]: some styles added.

--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -62,3 +62,10 @@
         background-color: colors.$black
       &:focus
         outline-color: colors.$black
+
+.Gift.preview
+  .gift-name
+    width: 100%
+
+    span:first-child
+      width: 100%
