--- a/src/styles/GiftList.sass
+++ b/src/styles/GiftList.sass
@@ -28,13 +28,16 @@
     font-size: 2rem
     color: colors.$white
 
+  .total-container.preview
+    display: none
+
   .noGifts-container
     display: flex
     flex-direction: column
     align-items: center
 
     h2
-      margin-bottom: sizes.$md
+      margin: sizes.$md 0
 
     .noGifts-btn, .noGifts-preview, .noGifts-close
       width: 40%
@@ -74,3 +77,7 @@
       font-weight: bold
       margin-top: sizes.$lg
       color: colors.$text-primary
+
+  h1
+    margin-bottom: sizes.$lg
+    font-size: 2rem
