[FEAT]: styles added.

--- a/src/styles/GiftList.sass
+++ b/src/styles/GiftList.sass
@@ -39,7 +39,7 @@
     h2
       margin: sizes.$md 0
 
-    .noGifts-btn, .noGifts-preview, .noGifts-close
+    .noGifts-btn, .noGifts-preview, .noGifts-close, .noGifts-print
       width: 40%
       margin-top: sizes.$lg
       border: none
@@ -66,8 +66,23 @@
       &:focus
         outline-color: colors.$black
 
-    .noGifts-close
-      margin-top: 0
+    .noGifts-buttons
+      width: 100%
+      display: flex
+      justify-content: space-between
+      margin-top: sizes.$lg
+
+      .noGifts-close, .noGifts-print
+        width: 45%
+        padding: sizes.$lg
+        margin-top: 0
+
+      .noGifts-close
+        color: colors.$black
+        background-color: #ccc
+        &:hover
+          color: colors.$text-primary
+          background-color: colors.$black
 
     .noGifts-img
       width: sizes.$image-size
