--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -13,8 +13,11 @@
     align-self: center
 
   .gift-img
+    margin: 0
+    border-top-left-radius: sizes.$md
+    border-bottom-left-radius: sizes.$md
     height: sizes.$no-image-size
-    width: 18%
+    width: sizes.$no-image-size
 
   .gift-name
     width: 85%
