minor change added.

--- a/src/styles/Gift.sass
+++ b/src/styles/Gift.sass
@@ -25,10 +25,10 @@
     font-weight: bold
     overflow-wrap: break-word
 
-    .gift-quantity
+    .gift-quantity, .gift-to
       color: colors.$black
 
-    .gift-to
+    .gift-price
       color: colors.$white
 
   div
